infra/k8s/sociosphere/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sociosphere
spec:
  selector:
    app: sociosphere
  ports:
    - name: http
      port: 5000
      targetPort: 5000
